sumo/tests/jtrrouter/errors/network/edge/root__edge#function__empty2/errors.jtrrouter
Error: Edge '2' has an unknown type.
Quitting (on error).
